# ros2_systemd_manager

./: .gitignore  Makefile  README.md  pyproject.toml  ros2-systemd-manager.mk  ros2_services.example.yaml  ros2_systemd_manager.py  ros2_systemd_manager.sh
scripts/: bump_version.py
src/ros2_systemd_manager/: __main__.py  actions.py  cli.py  config.py  docs.py  domain.py  makefile_gen.py  ros2_services.example.yaml  runtime.py  scaffold.py  systemd_ops.py
src/ros2_systemd_manager/docs/: CPU_isolation.md
