[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2-systemd-manager"
version = "0.1.0"
description = "YAML-driven ROS2 systemd service manager"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
ros2-systemd-manager = "ros2_systemd_manager.cli:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ros2_systemd_manager = ["ros2_services.example.yaml"]
